Second attempt on fixing title on mobile devices
Second attempt on fixing title on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,8 @@ btn:visited
 
     .headingPrimaryMain
     {
-        margin-top: 75% !important;
+        margin-top: 70% !important;
+        font-size: 300%;
     }
 }
 
